--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,16 @@
     box-sizing: border-box;
     
 }
+main {
+    margin-top: 100px;
+    min-height: 100vh;   
+}
+body {
+    font-family: 'Roboto', sans-serif;
+}
+a {
+    color: inherit;
+}
 
 .header {
     background-color: moccasin;
@@ -19,17 +29,39 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 1rem;
 }
-.main {
-    /*background-image: url(../imagenes/cuachalalate.jpeg);*/
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: right center;
-    background-attachment: fixed; /* Efecto Parallax */
-    margin-top: 200px;
-    min-height: 100vh;
-    width: 100;
+
+
+.container {
+   /* background-color: red;
+    max-width: 800px;*/
+}
+
+.bootstrap1 {
+    /* background-color: lightgray; */
+    padding: 2rem 0;
+}
+
+.bootstrap1__video {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.bootstrap1__titulo {
+    text-align: center;
+    font-size: 30px;
+    color: #E94057;
+    margin-bottom: 2rem;
+}
+
+.bootstrap1__imagen {
+    display: block;
+    width: 200px;
+    height: auto;
+    margin: 0 auto;
+    margin-bottom: 2rem;
 }
 
 .quitar-fondo {
@@ -62,13 +94,18 @@
     display: flex; 
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    padding-left: 0;
+    margin-bottom: 0;
+    /*justify-content: space-between;*/
   
 
 }
 
 .nav__item{
     margin-left: 16px;
+}
+.nav__item--oculto {
+    display: none;
 }
 .header__icono{
     font-size: 32px;
@@ -144,14 +181,21 @@
 }
 .texto-titulo{
     color:darkgreen;
-    font-size: 42px;
+    font-size: 32px;
     margin: 1rem;
 }
 .nav-header {
     color: white;
     text-decoration:  none;
     margin: 1rem;
-}*/
+
+}
+.header__icono {
+    font-size: 32px;
+    color: orange;
+    text-decoration: none;
+    display: none;
+}
 /*a{text-decoration: none;}*/
 
 .seccion2 {
@@ -193,7 +237,20 @@
     left: 0;
     z-index: 10;
 }
-@media screen and (max-width: 1023px) {
+.faq1{
+    padding:5rem 0;
+}
+
+.carousel-item img {
+    height: 500px;
+    object-fit: cover;
+}
+
+/* Tablet */
+@media screen and (max-width:1023px){
+    .inicio1__centro {
+        display: none;
+    }
     .texto-titulo {
         color: darkgreen;
         font-size: 20px;
@@ -205,7 +262,44 @@
     }
 }
 
-@media screen and (max-width: 599px) {
+/* Movil */
+@media screen and (max-width:599px){
+    .footer {
+        padding: 4rem 1rem;
+    }
+
+    .nav-header {
+        display: none;
+        background-color: darkgreen;
+        position: fixed;
+        /* top, left, right, bottom */
+        top: 0;
+        left: 0;
+        z-index: 1000000;
+        width: 80%;
+        height: 100vh;
+    }
+
+    .flexbox__nav {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 1rem;
+        height: 100%;
+    }
+    
+    .header__icono {
+        display: block;
+    }
+
+    .nav:target {
+        display: block;
+    }
+
+    .nav__item--oculto {
+        display: block;
+    }
+
     .texto-titulo {
         color: darkgreen;
         font-size: 10px;
